Reformat and upgrade